--- a/.gitignore
+++ b/.gitignore
@@ -309,3 +309,7 @@ cython_debug/
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,pycharm,linux,macos
+
+my_settings.py
+.gitignore
+
