--- a/.gitignore
+++ b/.gitignore
@@ -311,3 +311,11 @@ cython_debug/
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,pycharm,linux,macos
 
 my_settings.py
+
+db_detailProduct.py
+
+db_uploader.py
+
+spao_data.csv
+
+speical_images.py
