use bulk_create & git -r rm --cached

--- a/.gitignore
+++ b/.gitignore
@@ -314,8 +314,12 @@ my_settings.py
 
 db_uploader.py
 
-db_detailedProduct.py
+db_detailProduct.py
 
 spao.csv
 
 special_images.py
+
+spao_user.csv
+
+db_userUploader.py
