--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
+asgiref==3.4.1
+autopep8==1.5.7
+certifi==2021.10.8
+cffi==1.14.6
+cryptography==3.4.8
 Django==3.2.8
 django-cors-headers==3.10.0
-PyMySQL==1.0.2
+djangorestframework-jwt==1.11.0
 mysqlclient==2.0.3
+pycodestyle==2.7.0
+pycparser==2.20
+PyMySQL==1.0.2
+pytz==2021.1
 sqlparse==0.4.2
-bcrypt==3.2.0
-PyJWT==2.2.0
+toml==0.10.2
